--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -1291,3 +1291,14 @@ img.img-small-ds0d {
 .right-side-content-aria-map {
     padding-left: 20px !important;
 }
+footer.footer {
+    margin-top: 50px;
+}
+.itemgridstyle {
+    box-shadow: 0px 6px 6px #0000001a;
+    margin: 30px 0;
+    padding: 28px 20px;
+}
+.title-dkdksldkfdf2.removepd.bg-dksld {
+    margin: 0;
+}
